# ultravox

./: .gitignore  CLAUDE.md  README.md  dev.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  vite
.claude/: launch.json
apps/ultravox/: .env.build.example  .env.production  .gitignore  index.html  package.json  tsconfig.json
apps/ultravox/scripts/: build-dmg.sh  notarize-dmg.sh  reposition-dmg.sh
apps/ultravox/src/: App.tsx  branding.ts  main.tsx
apps/ultravox/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
apps/ultravox/src-tauri/capabilities/: default.json
apps/ultravox/src-tauri/dmg-assets/: background.tiff
apps/ultravox/src-tauri/dmg-assets/Uninstall Ultravox.app/Contents/: Info.plist
apps/ultravox/src-tauri/dmg-assets/Uninstall Ultravox.app/Contents/MacOS/: applet
apps/ultravox/src-tauri/dmg-assets/Uninstall Ultravox.app/Contents/Resources/: applet.icns
apps/ultravox/src-tauri/dmg-assets/Uninstall Ultravox.app/Contents/Resources/Scripts/: main.scpt
apps/ultravox/src-tauri/dmg-assets/Uninstall Ultravox.app/Contents/_CodeSignature/: CodeResources
apps/ultravox/src-tauri/icons/: icon.icns
apps/ultravox/src-tauri/src/: app_picker.rs  claude_code.rs  frontmost.rs  hotkey.rs  lib.rs  local_llm.rs  local_whisper.rs  main.rs  media.rs  paste.rs  permissions.rs  pill_window.rs  recordings.rs  secure_store.rs  system.rs  tray.rs
apps/ultravox/src/components/: AutoModeAppsSection.tsx  ConfirmDialog.tsx  DuckVolumePicker.tsx  HotkeyRecorder.tsx  LocalLLMPicker.tsx  ModeIcons.tsx  PillStylePicker.tsx  RollingWaveform.tsx  TranscriptionModelPicker.tsx  VoiceWaveform.tsx  ui.tsx
apps/ultravox/src/hooks/: useFrontmostApp.ts  useHotkeyEvents.ts  useMicStream.ts  useRecorder.ts
apps/ultravox/src/lib/: apps.json  autoLocalRoute.ts  autoMode.ts  chime.ts  cleanupPrompts.ts  cleanupTemplates.ts  debugLog.ts  llmVariants.ts  networkStatus.ts  secure-store.ts  slug.ts  store-bridge.ts  tauri-bridge.ts  telemetry.ts  transcribe.ts  transcriptionVariants.ts  updater.ts  voiceModes.ts  voiceVocabulary.ts
apps/ultravox/src/lib/i18n/: I18nProvider.tsx  catalog.ts  messages.ts
apps/ultravox/src/panels/: ConfigurationPanel.tsx  HistoryPanel.tsx  HomePanel.tsx  ModeEditor.tsx  ModesPanel.tsx  SoundPanel.tsx  VocabularyPanel.tsx
apps/ultravox/src/styles/: settings.css
apps/ultravox/src/tests/: autoLocalRoute.test.ts  autoMode.test.ts  buildClaudePrompt.test.ts  i18n-static.test.ts  i18nProvider.test.tsx  slug.test.ts  store-bridge-pillstyle.test.ts  store-bridge.test.ts  stripSoundAnnotations.test.ts  transcribe.test.ts  useMicStream.test.ts  useRecorder.test.ts  voiceModes.test.ts  voiceVocabulary.test.ts
apps/ultravox/src/windows/: ModeOverlay.tsx  OnboardingWizard.tsx  PillWindow.tsx  SettingsWindow.tsx
apps/worker/: global.d.ts  index.ts  package.json  tsconfig.json  wrangler.jsonc
apps/worker/.wrangler/tmp/bundle-9rjZyJ/: middleware-insertion-facade.js  middleware-loader.entry.ts
apps/worker/.wrangler/tmp/dev-VnYOTt/: index.js  index.js.map
docs/: design.md  implementation-plan.md  research.md  shipping.md  v0.19.0-auto-mode-by-app.md
docs/inherited-memory/: MEMORY.md  feedback_ask_user_question_tool.md  feedback_localhost_first.md  feedback_no_claude_coauthor.md  feedback_shared_layer.md  project_openrouter_key_strategy.md  reference_design_system.md
docs/research/: superwhisper-architecture.md  superwhisper-pipeline-and-prompts.md
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-05-05-smartspeech-v1.md  2026-05-06-compact-settings.md  2026-05-06-open-tasks.md  2026-05-08-v0.10-local-whisper.md  2026-05-10-v012-triage.md  2026-05-11-v0.19.0-auto-mode-by-app.md
docs/superpowers/specs/: 2026-05-11-local-audio-recording-storage.md
releases/: README.md
source-material/components/: ConfirmDialog.jsx  ConfirmHost.jsx  EditableField.jsx  HotkeyRecorder.jsx  Toast.jsx  ToastHost.jsx  Tooltip.jsx  VoiceInput.jsx  VoiceModeSwitcher.jsx  VoiceRecordingIndicator.jsx  VoiceWaveform.jsx
source-material/lib/: notifications.js  voice.js  voiceHotkeys.js  voiceIcons.js  voiceModels.js  voiceModes.js  voiceSettings.js  voiceSounds.js  voiceVocabulary.js
source-material/shared/: detectLanguage.js  hmac.js  parseFrontmatter.js  parseFrontmatterValue.js  pathSafety.js  responses.js  sha256.js  slugify.js  wikilink.js
