[package]
name = "ultravox"
version = "0.10.18"
description = "Voice dictation companion for macOS"
authors = ["Benjamin Kurtz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ultravox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
tokio = { version = "1", features = ["time", "rt", "rt-multi-thread", "macros", "sync"] }
once_cell = "1"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies.whisper-rs]
version = "0.11"
default-features = false
features = ["metal"]

[target.'cfg(target_os = "macos")'.dependencies.symphonia]
version = "0.5"
features = ["aac", "isomp4", "ogg", "vorbis", "wav", "pcm"]

[target.'cfg(target_os = "macos")'.dependencies.rubato]
version = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSURL", "NSBundle"] }
