[package]
name = "ultravox"
version = "0.19.11"
description = "Voice dictation companion for macOS"
authors = ["Benjamin Kurtz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ultravox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
tokio = { version = "1", features = ["time", "rt", "rt-multi-thread", "macros", "sync"] }
once_cell = "1"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
futures-util = "0.3"
# Capture llama.cpp's internal error messages. llama-cpp-2 routes its C-side
# log output through `tracing` events; without a subscriber, those events are
# discarded and `LlamaModel::load_from_file` failures surface to JS as opaque
# "null result from llama cpp" with no actionable detail. tracing-subscriber
# is used to install a custom layer in local_llm.rs that captures recent
# events into a ring buffer so we can append them to the error string.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
# macOS Keychain via Apple's Security.framework. We disable default features
# (which pull in Linux secret-service via dbus / Windows wincred) to keep
# the build minimal — on macOS the Security.framework backend ships in libstd,
# no extra system deps needed. The `apple-native` feature explicitly opts
# into the Security.framework backend.
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "macos")'.dependencies.whisper-rs]
version = "0.11"
default-features = false
# CoreML routes the encoder through Apple's Neural Engine (ANE), giving 2-3×
# faster transcription on Apple Silicon (matching what Superwhisper / WhisperKit
# achieve). Each Whisper model needs a paired .mlmodelc bundle alongside its
# .bin file — auto-downloaded by local_whisper.rs (see download_coreml_for).
# Metal stays enabled as the fallback for the decoder and for any model that
# doesn't have a CoreML companion installed.
features = ["metal", "coreml"]

[target.'cfg(target_os = "macos")'.dependencies.llama-cpp-2]
version = "0.1.146"
default-features = false
features = ["metal"]

[target.'cfg(target_os = "macos")'.dependencies.symphonia]
version = "0.5"
features = ["aac", "isomp4", "ogg", "vorbis", "wav", "pcm"]

[target.'cfg(target_os = "macos")'.dependencies.rubato]
version = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSURL", "NSBundle"] }
core-graphics = "0.23"
